k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogzy-service
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: blogzy
